# esp32s3-waveshare-2.8-touch-lcd

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_QUALITY_REPORT.md  LICENSE  Makefile  README.md  STARTER_KIT_GUIDE.md  driver.md  sdkconfig  sdkconfig.defaults
components/board_drivers/: CMakeLists.txt
components/board_drivers/include/: board_config.hpp  board_constants.hpp  board_drivers.hpp  gt911_simple.hpp  lcd_st7701_rgb.hpp
components/board_drivers/src/: board_drivers.cpp  gt911_simple.cpp  lcd_st7701_rgb.cpp
components/imu_services/: CMakeLists.txt
components/imu_services/include/: imu_constants.hpp  imu_services.hpp
components/imu_services/src/: gaming_control.cpp  motion_detection.cpp  pedometer.cpp  screen_orientation.cpp
components/lvgl_wrapper/: CMakeLists.txt  lvgl_wrapper.cpp
components/lvgl_wrapper/include/: lvgl_wrapper.hpp
components/power_manager/: CMakeLists.txt  power_manager.cpp
components/power_manager/include/: power_constants.hpp  power_manager.hpp
components/rtc_services/: CMakeLists.txt
components/rtc_services/include/: rtc_constants.hpp  rtc_services.hpp
components/rtc_services/src/: rtc_services.cpp
components/sd_services/: CMakeLists.txt
components/sd_services/include/: sd_constants.hpp  sd_services.hpp
components/sd_services/src/: sd_services.cpp
main/: CMakeLists.txt  idf_component.yml  main.cpp  test.cpp  test.hpp  test_constants.hpp  ui.cpp  ui.hpp
